images/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/instance: "true"
        io.kompose.service: mariadb
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: chat
        - name: MYSQL_PASSWORD
          value: toor
        - name: MYSQL_ROOT_PASSWORD
          value: MyDBRoot123
        - name: MYSQL_USER
          value: node
        image: mariadb
        imagePullPolicy: ""
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
